# ft_printf

./: CMakeLists.txt  Makefile  a.out  author  ft_itoa_base.c  ft_printf.h  main.c  main_test.c
inc/: ft_printf.h
src/: char_str_perc.c  chars-int-percent.c  floats.c  floats_2.c  floats_3.c  floats_4.c  ft_itoa_new.c  ft_printf.c  hex.c  int_utils_1.c  int_utils_2.c  int_utils_3.c  ints.c  ints_utils.c  oct.c  oct_test.c  parsing.c  pnt-oct-hex.c  pnt_uns_hex.c  precision.c  print_str_char.c  str.c  unsigned.c  utils.c
